[project]
name = "express"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "christsui1228", email = "christsui1228@gmail.com"},
    {name = "", email = ""},
]
dependencies = [
    "fastapi>=0.114.2",
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "pypinyin>=0.53.0",
    "jieba>=0.42.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
